--- a/App_practical/appsettings.json
+++ b/App_practical/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "0.0.0.0:5009"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
