--- a/App_practical/appsettings.json
+++ b/App_practical/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "*": { "Url": "http://0.0.0.0:5009" }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
