--- a/App_practical/docker-compose.yml
+++ b/App_practical/docker-compose.yml
@@ -1,5 +1,5 @@
 ﻿services:     
- postgredb:
+ postgres:
     image: postgres:16.1
     restart: always
     environment:
@@ -9,10 +9,25 @@
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     ports:
-      - 15432:5432
+      - 5432:5432
+    networks:
+      - app-network
  web:
-   container_name: web-api
-   hostname: api
-   build: .
-   ports:
-     - "0.0.0.0:5009:5009"
+    container_name: web-api
+    hostname: api
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "5009:5009"
+    depends_on:
+      - postgres
+    networks:
+      - app-network
+
+volumes:
+  postgres_data:
+
+networks:
+    app-network:
+        driver: bridge
