--- a/App_practical/appsettings.Development.json
+++ b/App_practical/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+  "Kafka": {
+    "ProducerSettings": {
+      "BootstrapServers": "93.88.178.186:9094"
+    },
+    "ConsumerSettings": {
+      "BootstrapServers": "93.88.178.186:9094"
+    }
+  },
   "Kestrel": {
     "Endpoints": {
       "*": { "Url": "http://0.0.0.0:5009" }
