--- a/App_practical/appsettings.json
+++ b/App_practical/appsettings.json
@@ -1,4 +1,20 @@
 {
+  "Kafka": {
+    "ProducerSettings": {
+      "BootstrapServers": "93.88.178.186:9094",
+      "SaslMechanism": "Plain",
+      "SecurityProtocol": "Plaintext"
+    },
+    "ConsumerSettings": {
+      "BootstrapServers": "93.88.178.186:9094",
+      "GroupId": "9_Calculator",
+      "SaslMechanism": "Plain",
+      "SecurityProtocol": "Plaintext",
+      "AutoOffsetReset": "Earliest",
+      "EnableAutoCommit": true
+    },
+    "TopicName": "9_Calculator"
+  },
   "Kestrel": {
     "Endpoints": {
       "*": { "Url": "http://0.0.0.0:5009" }
