--- a/App_practical/appsettings.json
+++ b/App_practical/appsettings.json
@@ -7,13 +7,13 @@
     },
     "ConsumerSettings": {
       "BootstrapServers": "93.88.178.186:9094",
-      "GroupId": "9_Calculator",
+      "GroupId": "9_сalculator",
       "SaslMechanism": "Plain",
       "SecurityProtocol": "Plaintext",
       "AutoOffsetReset": "Earliest",
       "EnableAutoCommit": true
     },
-    "TopicName": "9_Calculator"
+    "TopicName": "9_сalculator"
   },
   "Kestrel": {
     "Endpoints": {
