--- a/App_practical/docker-compose.yml
+++ b/App_practical/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     build: .
     ports:
       - "0.0.0.0:5009:5009"
+    networks:
+      - metrics-net
 
   prometheus:
     image: prom/prometheus:latest
