--- a/App_practical/prometheus/config/prometheus.yml
+++ b/App_practical/prometheus/config/prometheus.yml
@@ -5,4 +5,4 @@ scrape_configs:
     metrics_path: '/metrics'
     scrape_interval: 10s 
     static_configs:
-      - targets: ["host.docker.internal:5009"]
+      - targets: ["93.88.178.186:5009"]
